TP5/services.yaml
apiVersion: v1
kind: Service
metadata:
  name: pizzas-services
spec:
  selector:
    app: pizzas
  ports:
  - name: http
    port: 80
    targetPort: 80
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: pizzas-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: pizzas
  template:
    metadata:
      labels:
        app: pizzas
    spec:
      containers:
      - name: pizzas
        image: pierredasilva/pizzas-image
        ports:
        - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: tacos-services
spec:
  selector:
    app: tacos
  ports:
  - name: http
    port: 80
    targetPort: 80
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: tacos-deployment
spec:
  replicas: 3
  selector:
    matchLabels:
      app: tacos
  template:
    metadata:
      labels:
        app: tacos
    spec:
      containers:
      - name: tacos
        image: pierredasilva/tacos-image
        ports:
        - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: burgers-services
spec:
  selector:
    app: burgers
  ports:
  - name: http
    port: 80
    targetPort: 80
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: burgers-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: burgers
  template:
    metadata:
      labels:
        app: burgers
    spec:
      containers:
      - name: burgers
        image: pierredasilva/burgers-image
        ports:
        - containerPort: 80
